<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="weightET">Enter Weight...</string>
    <string name="ShippingCosts">Shipping Costs</string>
    <string name="clarifyInOunces">(In Ounces)</string>
    <string name="addedTextCost">Added Cost:</string>
    <string name="totalShippingCostText">Total Shipping Cost:</string>
    <string name="addedCostNum">$ 0.00</string>
    <string name="totalCostNum">$ 0.00</string>
    <string name="baseCostText">Base Cost:</string>
    <string name="baseCostNum">$ 3.00</string>
    <string name="cardboardBackground">cardboard background</string>
</resources>
