<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shipping_background"
        android:contentDescription="@string/cardboardBackground"
        android:scaleType="fitCenter"
        android:scaleX="1"
        android:scaleY="1.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/shipping_background" />

    <EditText
        android:id="@+id/weightET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/weightET"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShippingCosts" />

    <TextView
        android:id="@+id/ShippingCosts"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/ShippingCosts"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clarifyInOunces"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="563dp"
        android:gravity="center"
        android:text="@string/clarifyInOunces"
        android:textColor="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_blue_dark"
        android:scaleY="1.2"
        app:layout_constraintBottom_toTopOf="@+id/clarifyInOunces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightET" />

    <LinearLayout
        android:layout_width="373dp"
        android:layout_height="97dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.120000005">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/baseCostText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/baseCostText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/baseCostNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/baseCostNum"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/addedCostText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/addedTextCost"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addedCostNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/addedCostNum"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/totalShippingCostText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/totalShippingCostText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalCostNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/totalCostNum"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>